Regression: Sculpt mode: Line project crashes blender #108258

Closed
opened 2023-05-25 07:32:43 +02:00 by Nahuel Belich · 3 comments

System Information
Operating system: Linux-5.19.0-42-generic-x86_64-with-glibc2.35 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.105.01

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25 02:30, hash: 9182ebdfde49

Caused by 4d841e1b35

Short description of error
Using the line project with thees specific steps crashes.
2023-05-25 02-22-53.mp4
This was also tested after "reset factory settings".

Exact steps for others to reproduce the error

  1. Open blender.
  2. Select the cube.
  3. Enter sculpt mode
    (Doing the next to steps using the UI it also crash but not that often for some reason).
  4. Press r and set the voxel size around 0.0500 (could be a bit more a bit less).
  5. Press Ctrl+r to voxel remesh remesh.
  6. Select in the tool shelf the "line project".
  7. Use the tool to project more than half of the object as seen in the video above/attached.
**System Information** Operating system: Linux-5.19.0-42-generic-x86_64-with-glibc2.35 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 515.105.01 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-05-25 02:30, hash: `9182ebdfde49` Caused by 4d841e1b35 **Short description of error** Using the line project with thees specific steps crashes. [2023-05-25 02-22-53.mp4](/attachments/13a02109-69be-48bb-a189-c56b4a849684) This was also tested after "reset factory settings". **Exact steps for others to reproduce the error** 1. Open blender. 2. Select the cube. 3. Enter sculpt mode (Doing the next to steps using the UI it also crash but not that often for some reason). 4. Press r and set the voxel size around 0.0500 (could be a bit more a bit less). 5. Press Ctrl+r to voxel remesh remesh. 6. Select in the tool shelf the "line project". 7. Use the tool to project more than half of the object as seen in the video above/attached.
Nahuel Belich added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-05-25 07:32:44 +02:00
Iliya Katushenock added the
Interest
Sculpt, Paint & Texture
label 2023-05-25 07:47:09 +02:00
Iliya Katushenock changed title from Sculpt mode: line project crashes blender to Regression: Sculpt mode: Line project crashes blender 2023-05-25 07:50:30 +02:00
Member

Thanks for the report. I can confirm, bisecting

Thanks for the report. I can confirm, bisecting
Pratik Borhade added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-05-25 08:01:44 +02:00
Iliya Katushenock added
Module
Sculpt, Paint & Texture
and removed
Interest
Sculpt, Paint & Texture
labels 2023-05-25 08:04:15 +02:00
Author

I have a bit more info that just notice a few minutes ago, any tool used after remeshing can cause crashes and really weird shading issues, except if after remeshing i go to object mode then go back to sculpt mode again.
Changing modes after voxel remesh seems to avoid the crashing.

I have a bit more info that just notice a few minutes ago, any tool used after remeshing can cause crashes and really weird shading issues, except if after remeshing i go to object mode then go back to sculpt mode again. Changing modes after voxel remesh seems to avoid the crashing.
Member

Caused by 4d841e1b35

CC @HooglyBoogly

Caused by 4d841e1b355959aba4b55e9f7bfa83af0ed2d162 CC @HooglyBoogly
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-05-25 14:53:19 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-25 14:54:30 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#108258
No description provided.