Fix #108258: Sculpt mode crash after remesh

4d841e1b355959aba4b5 incorrectly removed the clearing
of mesh topology maps when the object is reevaluated.